refact() use github.com/simonvetter/modbus
